# corgi-image

./: CMakeLists.txt  conanfile.txt  install.bat
.github/workflows/: Actions.yml
cmake/: Config.cmake.in
example/: CMakeLists.txt
example/sdl/: CMakeLists.txt
example/sdl/src/: main.cpp
include/corgi/image/: binary.h  color.h  image.h  pixel.h  raster_image.h  stb_image.h  stb_image_write.h
src/: CMakeLists.txt  color.cpp  image.cpp  pixel.cpp  raster_image.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test.cpp
